  (and resets the patch)
* Bug fixes and misc changes bumps the patch


qdapTools 1.0.2
----------------------------------------------------------------

BUG FIXES

* `lookup` would throw warning and convert to more restrictive mode when 
  (1) `terms` mode and `key.reassign` modes didn't match & (2) `missing = NULL`.
  This behavior has been fixed.  See issue #5.

NEW FEATURES

MINOR FEATURES

IMPROVEMENTS

CHANGES

qdapTools 1.0.1
----------------------------------------------------------------

BUG FIXES

* `pad` did not work consistently across all platforms.  This behavior has been 
  fixed.

NEW FEATURES

MINOR FEATURES

IMPROVEMENTS

CHANGES


qdapTools 1.0.0
----------------------------------------------------------------

This version of `qdapTools` incorporates the `data.table` package.  This 
  provides huge speed boosts within a flexible frame work.  The old behavior of 
  the `lookup` functions was to convert `factor` to `character`.  The latest 
  version does not perform this coercion.  Those relying on this behavior may 
  find their code breaks hence the major bump to version 1.0.0.  Thank you to 
  Arun Srinivasan for his demonstration of the `data.table` package and help in 
  incorporating it into `qdapTools`.

BUG FIXES

* `lookup` did not have a method for when `key.match` was a factor;
  `lookup.factor` added.

NEW FEATURES

* `lookup` and `hash` families of functions wraps `data.table` package to 
  provide the ease of the lookup binary operators with the speed of the 
  `data.table` package.

* `qdapTools` now uses the `testthat` package to provide unit testing on 
  the package functions.

IMPROVEMENTS

* `v_outer` gains a speed boost through optimization optimization, including a 
  suggestion from stackoverflow.com's eddi: 
  http://stackoverflow.com/users/817778/eddi.

* `id` now allows the user to supply a character string prefix via the `prefix` 
  argument.

CHANGES
