@@ -43,6 +43,7 @@ export(mtabulate)
 export(pad)
 export(repo2github)
 export(sec2hms)
+export(split_vector)
 export(text2color)
 export(url_dl)
 export(v_outer)
